--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
         <swagger.version>3.0.0</swagger.version>
         <poi.version>4.1.2</poi.version>
         <oshi.version>6.4.1</oshi.version>
+        <lombok.version>1.18.20</lombok.version>
+
     </properties>
 
     <dependencies>
@@ -208,6 +210,13 @@
                     <groupId>javax.servlet</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
 
         <!-- Swagger3依赖 -->
