--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,16 +20,16 @@ server:
   servlet:
     # 应用的访问路径
     context-path: /
-#  tomcat:
-#    # tomcat的URI编码
-#    uri-encoding: UTF-8
-#    # 连接数满后的排队数，默认为100
-#    accept-count: 1000
-#    threads:
-#      # tomcat最大线程数，默认为200
-#      max: 800
-#      # Tomcat启动初始化的线程数，默认值10
-#      min-spare: 100
+  #  tomcat:
+  #    # tomcat的URI编码
+  #    uri-encoding: UTF-8
+  #    # 连接数满后的排队数，默认为100
+  #    accept-count: 1000
+  #    threads:
+  #      # tomcat最大线程数，默认为200
+  #      max: 800
+  #      # Tomcat启动初始化的线程数，默认值10
+  #      min-spare: 100
   undertow:
     threads:
       io: 4
@@ -40,7 +40,7 @@ server:
     enabled: true
     #10k 才进行压缩
     minResponseSize: 10240
- 
+
 # 日志配置
 logging:
   level:
@@ -68,15 +68,15 @@ spring:
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
-  profiles: 
+  profiles:
     active: druid
   # 文件上传
   servlet:
-     multipart:
-       # 单个文件大小
-       max-file-size:  10MB
-       # 设置总上传的文件大小
-       max-request-size:  20MB
+    multipart:
+      # 单个文件大小
+      max-file-size:  10MB
+      # 设置总上传的文件大小
+      max-request-size:  20MB
   # 服务模块
   devtools:
     restart:
@@ -84,19 +84,19 @@ spring:
       enabled: true
 
 # MyBatis
-mybatis:
-    # 搜索指定包别名
-    typeAliasesPackage: com.ruoyi.project.**.domain
-    # 配置mapper的扫描，找到所有的mapper.xml映射文件
-    mapperLocations: classpath:mybatis/**/*Mapper.xml
-    # 加载全局的配置文件
-    configLocation: classpath:mybatis/mybatis-config.xml
+#mybatis:
+#  # 搜索指定包别名
+#  typeAliasesPackage: com.ruoyi.project.**.domain,com.laien.*.entity
+#  # 配置mapper的扫描，找到所有的mapper.xml映射文件
+#  mapperLocations: classpath:mybatis/**/*Mapper.xml,classpath*:mapper/**/*Mapper.xml
+#  # 加载全局的配置文件
+#  configLocation: classpath:mybatis/mybatis-config.xml
 
 # PageHelper分页插件
-pagehelper: 
+pagehelper:
   helperDialect: mysql
   supportMethodsArguments: true
-  params: count=countSql 
+  params: count=countSql
 
 # Shiro
 shiro:
@@ -113,7 +113,7 @@ shiro:
     captchaType: math
   cookie:
     # 设置Cookie的域名 默认空，即当前访问的域名
-    domain: 
+    domain:
     # 设置cookie的有效访问路径
     path: /
     # 设置HttpOnly属性
@@ -121,7 +121,7 @@ shiro:
     # 设置Cookie的过期时间，天为单位
     maxAge: 30
     # 设置密钥，务必保持唯一性（生成方式，直接拷贝到main运行即可）Base64.encodeToString(CipherUtils.generateNewKey(128, "AES").getEncoded()) （默认启动生成随机秘钥，随机秘钥会导致之前客户端RememberMe Cookie无效，如设置固定秘钥RememberMe Cookie则有效）
-    cipherKey: 
+    cipherKey:
   session:
     # Session超时时间，-1代表永不过期（默认30分钟）
     expireTime: 30
@@ -138,7 +138,7 @@ shiro:
     enabled: true
 
 # 防止XSS攻击
-xss: 
+xss:
   # 过滤开关
   enabled: true
   # 排除链接（多个用逗号分隔）
@@ -152,7 +152,7 @@ swagger:
   enabled: true
 
 # 代码生成
-gen: 
+gen:
   # 作者
   author: ruoyi
   # 默认生成包路径 system 需改成自己的模块名称 如 system monitor tool
@@ -161,3 +161,22 @@ gen:
   autoRemovePre: true
   # 表前缀（生成类名不会包含表前缀，多个用逗号分隔）
   tablePrefix: sys_
+
+#mybatis-plus
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
+    auto-mapping-behavior: full
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath:mybatis/**/*Mapper.xml,classpath*:mapper/**/*Mapper.xml
+  typeAliasesPackage: com.ruoyi.project.**.domain,com.laien.*.entity
+  global-config:
+    # 使用sql Runner
+    enable-sql-runner: true
+    # 逻辑删除配置
+    db-config:
+      # 删除前
+      logic-not-delete-value: 0
+      # 删除后
+      logic-delete-value: 1
+  type-enums-package: com.laien.demo.constant.enum_
