--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,6 +55,8 @@ user:
 
 # Spring配置
 spring:
+  application:
+    name: demo
   # 模板引擎
   thymeleaf:
     mode: HTML
@@ -149,9 +151,9 @@ xss:
 # 代码生成
 gen:
   # 作者
-  author: ruoyi
+  author: qmf
   # 默认生成包路径 system 需改成自己的模块名称 如 system monitor tool
-  packageName: com.ruoyi.project.system
+  packageName: com.laien.${spring.application.name}
   # 自动去除表前缀，默认是true
   autoRemovePre: true
   # 表前缀（生成类名不会包含表前缀，多个用逗号分隔）
