--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,14 @@
             <version>${okhttp.version}</version>
         </dependency>
 
+
+        <!-- jwt jar-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
